k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
spec:
  selector:
    app: demo-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
